[tool.poetry]
name = "loralite"
version = "0.2.0"
description = ""
authors = ["Sergiusz Michalik <lukasz.s.michalik@uit.no>"]

[tool.poetry.dependencies]
python = "^3.10.6"
sortedcontainers = "^2.4.0"
numpy = "^1.22.1"
matplotlib = "^3.5.1"
mypy = "^0.971"
black = "^22.1.0"
Deprecated = "^1.2.13"
mysql-connector-python = "^8.0.28"
"oslo.concurrency" = "^5.0.0"
crcmod = "^1.7"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pylint = "^2.12.2"
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
follow_imports = 'normal'
show_column_numbers = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
